# VIO-course

./: README.md
ch2/vio_data_simulation-master/src/: imu.cpp  imu.h  param.cpp  param.h
ch3/CurveFitting_LM/app/: CurveFitting.cpp
ch3/CurveFitting_LM/backend/: edge.h  problem.cc  vertex.cc  vertex.h
ch4/nullspace_test/: CMakeLists.txt  hessian_nullspace_test.cpp
ch5/: CMakeLists.txt
ch5/app/: CMakeLists.txt  TestBinaryBA.cpp  TestMonoBA.cpp
ch5/backend/: edge.h  edge_reprojection.cc  edge_reprojection.h  loss_function.cc  loss_function.h  problem.cc  problem.h  vertex.h
ch6/: triangulate.cpp
imu_allan标定实验/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
imu_allan标定实验/devel/lib/code_utils/: matIO_test  sumpixel_test
imu_allan标定实验/devel/lib/pkgconfig/: code_utils.pc  imu_utils.pc
imu_allan标定实验/devel/share/code_utils/cmake/: code_utilsConfig.cmake
imu_allan标定实验/devel/share/imu_utils/cmake/: imu_utilsConfig.cmake
imu_allan标定实验/src/code_utils/: CMakeLists.txt
imu_allan标定实验/src/imu_utils/data/: A3_imu_param.yaml  data_A3_acc_t.txt  data_A3_acc_x.txt  data_A3_acc_y.txt  data_A3_acc_z.txt  data_A3_gyr_x.txt  data_A3_gyr_y.txt  data_A3_gyr_z.txt  data_A3_sim_acc_x.txt  data_A3_sim_acc_y.txt  data_A3_sim_acc_z.txt  data_A3_sim_gyr_x.txt  data_A3_sim_gyr_y.txt  data_A3_sim_gyr_z.txt
imu_allan标定实验/src/imu_utils/launch/: A3.launch  my.launch  vio_lecture.launch
openMP/: CMakeLists.txt  main.cpp
